feat: prepare for production deployment